Luis (1st update)
This may work for now but I'll be uploading final version today or
tomorrow.

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
                 <div id="downloads">
                     <h3>Downloads</h3>
                     <div class="half">
-                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">Linux 32-Bit</a>
-                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">Linux 64-Bit</a>
+                        <a class="lin32" href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">Linux 32-Bit</a>
+                        <a class="Lin64" href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">Linux 64-Bit</a>
                     </div>
                     <div class="half">
-                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">OSX</a>
-                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">Windows</a>
+                        <a class="OSXupdate" href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">OSX</a>
+                        <a class="WindowsUpdate" href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">Windows</a>
                     </div>
                 </div>
             </div>
@@ -293,6 +293,6 @@
       }
     </script> <!-- Load local jQuery if Google CDN is unreachable -->
     <script type="text/javascript" src="_scripts/ven.slick.min.js"></script>
-    <script src="_scripts/main.js"></script>
+    <script src="_js/main.js"></script>
 </body>
 </html>
