Bug Fix 1 (Micah)

--- a/index.html
+++ b/index.html
@@ -511,6 +511,6 @@
       }
     </script> <!-- Load local jQuery if Google CDN is unreachable -->
     <script type="text/javascript" src="_scripts/ven.slick.min.js"></script>
-    <script src="_scripts/main.js"></script>
+    <script src="_scripts/main.js"></script><!-- _js.main.js-->
 </body>
 </html>
