--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <li><a href="http://github.com/TheJaredWilcurt">The Jared Wilcurt</a> - Project Management, Site Content, General styles, Image optimization</li>
                     <li><a href="https://github.com/LRod-101">Luis Rodriguez</a> - Dynamic GitHub API integration
                     <li><a href="https://github.com/kimmortal1">Kim Sharpe</a> - Logo/Branding</li>
-                    <li><a href="https://github.com/getmicah">Michah Cowell</a> - Gulp setup, Automated Sass processing, JS Minification/Uglification, Hot reloading, LoFi Mockups/Wireframes</li>
+                    <li><a href="https://github.com/getmicah">Micah Cowell</a> - Gulp setup, Automated Sass processing, JS Minification/Uglification, Hot reloading, LoFi Mockups/Wireframes</li>
                 </ul>
             </div>
             <div class="half">
