Added prev ver link and updated min reqs

--- a/index.html
+++ b/index.html
@@ -61,14 +61,15 @@
                 <div id="downloads">
                     <h3>Downloads</h3>
                     <div class="half">
-                        <a class="lin32" href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">Linux 32-Bit</a>
-                        <a class="lin64" href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">Linux 64-Bit</a>
+                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank" class="lin32">Linux 32-Bit</a>
+                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank" class="lin64">Linux 64-Bit</a>
                     </div>
                     <div class="half">
-                        <a class="osxupdate" href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">OSX</a>
-                        <a class="windowsupdate" href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">Windows</a>
+                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank" class="osxupdate">OSX</a>
+                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank" class="windowsupdate">Windows</a>
                     </div>
                 </div>
+                <p><a href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">Previous Versions</a></p>
             </div>
             <div class="half bgblack">
                 <!-- Placeholder video -->
@@ -286,15 +287,15 @@
                         <td rowspan="3">
                             <div class="win">
                                 At least <strong>64MB</strong> of available RAM.
-                                At least <strong>100MB</strong> of free space.
+                                At least <strong>140MB</strong> of free space.
                                 <strong>XP, Vista, 7, 8, 10.</strong>
                                 <strong>32-Bit</strong> or <strong>64-Bit</strong> OS (ARM not supported).
                             </div>
                             <div class="osx">
-                                At least <strong>???MB</strong> of available RAM.
+                                At least <strong>64MB</strong> of available RAM.
                                 At least <strong>180MB</strong> of free space.
                                 <strong>10.6, 10.7, 10.8, 10.9, 10.10, 10.11.</strong>
-                                <strong>64-Bit</strong> OS only (32-Bit and ARM not supported).
+                                <strong>64-Bit</strong> OS only (32-Bit and ARM are not supported).
                             </div>
                             <div class="linux">
                                 At least <strong>64MB</strong> of available RAM.
