--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
         </div>
         <div>
             <h4>Ideas and Issues</h4>
-            <a href="https://github.com/mhs/scout-app/issues/new?title=SA2%20-%20&body=OS%3A%20%0DInformation%20from%20Dev%20Tools%3A%20%0D%0D%28Attach%20screenshot%20below%29">Report Bugs</a>
+            <a href="https://github.com/mhs/scout-app/issues/new?title=SA2%20-%20&body=OS%3A%20%0DVersion%3A%20%0DInformation%20from%20Dev%20Tools%3A%20%0D%0D%28Attach%20screenshot%20below%29">Report Bugs</a>
             <a href="https://github.com/mhs/scout-app/issues/new?title=SA2%20Feature%20Request%20-%20">Request Features</a>
         </div>
         <div>
