--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />    <!-- Must be first item in <Head> -->
-    <title>Scout - Sass without all the hassle</title>
+    <title>Scout-App - Sass without hassle</title>
     <meta charset="UTF-8"                                                                                  />
     <meta name="description"                     content="Scout-App, the easiest way to use Sass!"         />
     <meta name="keywords"                        content="Scout, Scout-App, scoutapp, scout app, Sass, scss, css, preprocessor, GUI, styles, front-end, web design, web development tools, free, open source"/>
