Implement Crossbrowser and 32 or 64 libraries

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                                 <strong>10.6, 10.7, 10.8, 10.9, 10.10, 10.11.</strong>
                                 <strong>64-Bit</strong> OS only (32-Bit and ARM are not supported).
                             </div>
-                            <div class="linux">
+                            <div class="ubuntu">
                                 At least <strong>64MB</strong> of available RAM.
                                 At least <strong>170MB</strong> of free space.
                                 <strong>Ubuntu 12, Ubuntu 14, Ubuntu 16, Debian 8, Zorin 9, Zorin 11.</strong>
@@ -307,7 +307,7 @@
                         </td>
                     </tr>
                     <tr><th data-os="osx">OSX</th></tr>
-                    <tr><th data-os="linux">Linux</th></tr>
+                    <tr><th data-os="ubuntu">Linux</th></tr>
                 </table>
             </div>
             <div id="mixins" class="half bgpuppybase">
@@ -512,6 +512,8 @@
       }
     </script> <!-- Load local jQuery if Google CDN is unreachable -->
     <script type="text/javascript" src="_scripts/ven.slick.min.js"></script>
+    <script src="_scripts/crossbrowser.js"></script>
+    <script src="_scripts/64or32-jquery.min.js"></script>
     <script src="_scripts/main.js"></script><!-- _js.main.js-->
 </body>
 </html>
