removed wait on library

--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <title>Scout-App - Sass without hassle</title>
     <meta charset="UTF-8"                                                                                  />
     <meta name="description"                     content="Scout-App, the easiest way to use Sass!"         />
-    <meta name="keywords"                        content="Scout, Scout-App, scoutapp, scout app, Sass, scss, css, preprocessor, GUI, styles, front-end, web design, web development tools, free, open source"/>
+    <meta name="keywords"                        content="Scout, Scout-App, scoutapp, scout app, Sass, scss, css, preprocessor, GUI, styles, front-end, web design, web development tools, free, open source" />
     <meta http-equiv="Expires"                   content="0"                                               />
     <meta name="viewport"                        content="width=device-width, initial-scale=1.0"           />
     <meta name="subject"                         content="Homepage for Scout-App"                          />
     <meta name="copyright"                       content="Mutually Human"                                  />
     <meta name="language"                        content="EN"                                              />
     <meta name="robots"                          content="index,follow"                                    />
-    <meta name="author"                          content="The Jared Wilcurt"                               />
-    <meta name="designer"                        content=""                                                />
     <meta name="owner"                           content="Mutually Human"                                  />
     <meta name="rating"                          content="General"                                         />
     <meta name="HandheldFriendly"                content="True"                                            />
@@ -502,6 +500,8 @@
             <a href="https://github.com/TheJaredWilcurt/scout-app/blob/Scout-App-2-Dev/documentation/contributing.md">Work on features that are on the roadmap</a>
         </div>
     </footer>
+
+    <kbd class="keywords">Scout, Scout-App, scoutapp, scout app, Sass, scss, css, preprocessor, GUI, styles, front-end, web design, web development tools, free, open source</kbd>
 
     <!-- SCRIPTS -->
 
