Fix issues with Internet Explorer styles

--- a/index.html
+++ b/index.html
@@ -47,7 +47,13 @@
 </head>
 <body>
     <header>
-        <img src="_img/scout-app-logo.svg" alt="Scout-App 2 Logo" />
+        <table>
+            <tbody>
+                <tr>
+                    <td><img src="_img/scout-app-logo.svg" alt="Scout-App 2 Logo" /></td>
+                </tr>
+            </tbody>
+        </table>
     </header>
 
     <main>
@@ -465,7 +471,7 @@
                 <h2 class="textpuppyspot">Scout-App was made with:</h2>
             </div>
             <div class="thirds textpuppyspot">
-                <a href="https://github.com/sass/node-sass" target="_blank"><img src="_img/logo-nodesass.svg" alt="The Node-Sass engine." title="The Node-Sass engine." /></a>
+                <a href="https://github.com/sass/node-sass" target="_blank"><img src="_img/logo-nodesass.svg" alt="The Node-Sass engine." title="The Node-Sass engine." class="node-sass" /></a>
                 <p>The Node-Sass engine.</p>
             </div>
             <div class="thirds textpuppyspot">
