--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
         </div>
         <div>
             <h4>Contribute</h4>
-            <a href="#cultures">Translate Scout-App</a>
+            <a href="#cultures" class="translate-link">Translate Scout-App</a>
             <a href="https://www.youtube.com/watch?v=DtEVIDvBrSI" target="_blank">Create a Theme</a>
             <a href="https://github.com/mhs/scout-app/issues">Fix Existing Bugs</a>
             <a href="https://github.com/TheJaredWilcurt/scout-app/blob/Scout-App-2-Dev/documentation/contributing.md">Work on features that are on the roadmap</a>
