--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <li><a href="http://github.com/TheJaredWilcurt">The Jared Wilcurt</a> - Creator, Maintainer, Project Manager</li>
                     <li><a href="http://github.com/StephanRaab">Stephan Raab</a> - Themes feature, Bug Testing</li>
                     <li><a href="https://github.com/BlackBetty">Daniel Golant</a> - UX Testing and Design</li>
-                    <li><a href="https://github.com/kimmortal1">Kim Sharpe</a> - New Logo Design</li>
+                    <li><a href="https://github.com/kimmihack">Kim Sharpe</a> - New Logo Design</li>
                     <li><a href="http://github.com/zdennis">zdennis</a> - UX Design and Planning</li>
                     <li><a href="http://github.com/mejiaj">mejiaj</a> - UX Design and Planning</li>
                 </ul>
@@ -243,7 +243,7 @@
                 <ul>
                     <li><a href="http://github.com/TheJaredWilcurt">The Jared Wilcurt</a> - Project Management, Site Content, General styles, Image optimization</li>
                     <li><a href="https://github.com/LRod-101">Luis Rodriguez</a> - Dynamic GitHub API integration
-                    <li><a href="https://github.com/kimmortal1">Kim Sharpe</a> - Logo/Branding</li>
+                    <li><a href="https://github.com/kimmihack">Kim Sharpe</a> - Logo/Branding, Testimonial Section UI Design/Dev</li>
                     <li><a href="https://github.com/getmicah">Micah Cowell</a> - Gulp setup, Automated Sass processing, JS Minification/Uglification, Hot reloading, LoFi Mockups/Wireframes</li>
                 </ul>
             </div>
