Updates to Quotes Section
Changed Sass & index.html markup for quotes section.

--- a/index.html
+++ b/index.html
@@ -171,20 +171,40 @@
             </div>
         </section>
 
-        <section id="quotes" class="bgpuppybase">
-            <h3>Scout-App is recommended by:</h3>
-            <ul>
-              <li>The official Sass Language website</li>
-              <li><cite>John W. Long, Managing Editor of TheSassWay.com</cite> &mdash; <q>Making it easier to use Sass.</q></li>
-              <li><cite>A List Apart</cite> &mdash; <q>A fast and easy way to work with Sass.</q></li>
-              <li><cite>Mashable</cite> &mdash; <q>Manage your projects effortlessly. Scout does all the heavy lifting.</q></li>
-              <li><cite>noeticforce</cite> &mdash; <q>Scout comes to the rescue and takes all the pain away. I love Scout and recommend it to everyone.</q></li>
-              <li><cite>Impressive Webs</cite> &mdash; <q>Dead simple to get started preprocessing.</q></li>
-              <li><cite>Web Resources Depot</cite> &mdash; <q>Allows anyone to make use of Sass without the complexity of the command line.</q></li>
-              <li><cite>Template Monster</cite> &mdash; <q>Scout-App delivers more control, organization, and optimization to web designers, making their CSS workflow a snap.</q></li>
-              <li><cite>OS Training</cite> &mdash; <q>If you are looking for free software to compile your Sass, this is a great option.</q></li>
-              <li><cite>Johnstonian Era</cite> &mdash; <q>It’s crazy simple to use.</q></li>
-            </ul>
+        <section id="quotes" class="bgpuppyspot">
+            <h1 class="textbrownsugarketchup">Scout-App is recommended by:</h1>
+                <div class="bgwhite">
+                    <img src="http://sass-lang.com/assets/img/logos/logo-b6e1ef6e.svg" width="150px" alt="Sass Logo" title="The official Sass website." />
+                </div>
+
+                <div class="bgmustard">
+                    <img src="https://pbs.twimg.com/profile_images/478913945475235840/Jv1mMBOA_400x400.jpeg" width="200px" />
+                    <h3>A fast and easy way to work with Sass</h3>
+                </div>
+
+                <div class="bgwhite">
+                    <h3>Allows anyone to make use of Sass without the<br />complexity of the command line.</h3>
+                    <p>- Web Resources Depot</p>
+                </div>
+
+                <div class="bgmustard">
+                    <img src="http://0.gravatar.com/avatar/03a157637809fe8303b61ab98b986fc2?s=100&r=pg&d=mm" alt="Johnistonian Era" />
+                        <div class="quote-right">
+                            <h3>It's crazy simple to use</h3>
+                            <p>- Johnistonian Era</p>
+                        </div>
+                </div>
+
+                <div class="bgwhite">
+                    <h3>Dead simple to get started preprocessing</h3>
+                    <p>- Impressive Webs</p>
+                </div>
+
+                <div class="bgmustard">
+                    <img src="http://thesassway.com/images/authors/john-w-long.jpeg" alt="John W. Long" />
+                    <h3>Making it easier to use Sass</h3>
+                    <p>John W. Long</p>
+                </div>
         </section>
 
         <section id="cultures" class="bgwhite">
